# ModernC

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/lib/: lib.c
src/lib/include/: lib.h
tests/: CMakeLists.txt  test_lib.cpp
